--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
-* reset */
+/* reset */
 html{
     font-size: 62.5;
     scroll-behavior: smooth;
 }
 body{
-    font: 1.6rem, sans-serif;
+    font: 1.6rem sans-serif;
     margin: 0;
     line-height: 1.6rem;
     letter-spacing: .1rem;
