--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,16 @@ header h1 {
   grid-template-columns: repeat(var(--m),auto);
 }
 
+.gallery > a > img {
+  width: 0;
+  height: 0;
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  filter: grayscale(80%);
+  transition: .35s linear;
+}
 .gallery > img {
   width: 0;
   height: 0;
