--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,13 @@ img{
     object-fit: cover;
     vertical-align: middle;
 }
+
+button {
+  background: transparent;
+  border: 0;
+  font-size: inherit;
+  cursor: pointer;
+}
 /* #presentation figure{
   max-width: 20%;
 }*/
@@ -55,6 +62,11 @@ header nav{
   font-size: 2.0rem;
   margin: 0 1rem;
   cursor: pointer;
+}
+
+button{
+  background-color: #E2AE87;
+  color: #E2AE87;
 }
 
 .navbar_droite {
@@ -187,4 +199,7 @@ body {
   background: #E2AE87;
 }
 
+.darkmode {
+
+}
 
