--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ header h1 {
   
   display: grid;
   gap: var(--g);
-  max-width: 80%;
+  max-width: 100%;
   height: 75vh;
   grid-template-columns: repeat(var(--m),auto);
 }
@@ -193,8 +193,9 @@ header h1 {
   width:  calc(100vh*var(--f)/var(--n));
   height: calc(100vw*var(--f)/var(--m));
 }
-
-
+.container{
+max-width: 75%;
+}
 body {
   margin: 0;
   background: #E2AE87;
